sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var aMixe:Boolean
      ^AlgCombSort:5: error: local variables must be initialized
  var aMixe:Boolean
      ^