sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  var ecart = getNombreValeurs()
  var aMixe:Boolean
  
  do {
    
    aMixe = false
    
    if (ecart > 1) {
      
      ecart = (ecart.toDouble / 1.3).toInt
      
    }
    
    var i = 0
    
    while (i+ecart < getNombreValeurs()) {
      
      if (!plusPetit(i+ecart,i)) {echange(i,i+ecart); aMixe=true}
      i = i + 1
      
    }
    
  } while (ecart>1 || aMixe)
}